--- a/style.css
+++ b/style.css
@@ -6,10 +6,27 @@
 body{
     
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     background-color: #151527;
+    /* border: 2px solid blue; */
+    margin: 0;
 
+}
+
+
+
+.image1{
+    /* position: absolute;
+    top: 0;
+    right: 0; */
+    background-image: url(/resources/profileBackground.jpeg);
+    height: 100vh;
+    width: 45vw;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-width: 500px;
+    /* border: 2px solid red; */
 }
 
 .containerMaster{
@@ -18,8 +35,9 @@ body{
     /* height: 200px; */
     /* width: 40vw; */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    /* border: 2px solid red; */
+    /* border: 2px solid green; */
     color: white;
+    /* padding-right: 5vw; */
     /* top: 25vh;
     left: 30vw; */
     /* pointer-events: none; */
@@ -35,7 +53,7 @@ body{
 
 .circles{
     position: absolute;
-    background-image: url("/circles.svg");
+    background-image: url("resources/circles.svg");
     background-repeat: no-repeat;
     z-index: -2;
     height: 163px;
