--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -9,7 +9,8 @@
 }
 
 html {
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
+    font-size: 62.5%;
 }
 
 body {
@@ -32,30 +33,34 @@ body {
 *::after {
     margin: 0;
     padding: 0;
-    box-sizing: inherit;
+    /* box-sizing: inherit; */
 }
 
-.container {
-    display: grid;
-    grid-template-columns: 200px 1fr 200px;
-    grid-template-rows: 68px 350px 350px 100px 100px max-content 100px 500px;
-}
-
-.tags {
-    position: sticky;
-    writing-mode: vertical-rl;
-    transform: rotate(180deg);
-    padding: 30px 10px;
-    font-size: 28px;
-    opacity: 0.25;
-}
-
-.home-tag {
-    grid-area: 3 / 1 / 3 / 2;
-    top: -200px;
-}
-
-.what-i-do-tag {
-    grid-area: 6 / 1 / 7 / 2;
-    top: 110px;
+@media screen and (min-width: 1024px) {
+    .container {
+        display: grid;
+        grid-template-columns: 10vw 1fr 10vw;
+        grid-template-rows: max-content max-content 1000px;
+        grid-row-gap: 100px;
+    }
+    
+    .tags {
+        position: sticky;
+        writing-mode: vertical-rl;
+        margin-top: auto; //FIXME: DO NOT CHANGE
+        transform: rotate(180deg);
+        padding-right: 1vw;
+        font-size: 1.8vw;
+        opacity: 0.25;
+    }
+    
+    .home-tag {
+        grid-area: 1 / 1 / 2 / 2;
+        top: 2vw;
+    }
+    
+    .what-i-do-tag {
+        grid-area: 2 / 1 / 3 / 2;
+        top: 12vw;
+    }
 }
