--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,138 +1,148 @@
-.header {
-    grid-area: 1 / 1 / 4 / 4;
-    display: grid;
-    grid-template-columns: 200px 1fr 600px;
-    grid-template-rows: 68px 350px 350px 100px;
-
-    &__topbar {
-        /* position: fixed; */
-        /* background-color: red; */
+@media screen and (min-width: 1024px) {
+    .header {
         grid-area: 1 / 1 / 2 / 4;
-        /* width: 100vw; */
-        /* height: 68px; */
         display: grid;
-        /* backdrop-filter: blur(5px); */
-        grid-template-columns: 1.5fr minmax(1fr, 200px) repeat(4, .75fr) minmax(1fr, 200px) 1.5fr;
-        justify-items: center;
-        align-items: center;
-        background-color: rgba(0, 0, 0, 1);
-        box-shadow: 0 10px 50px 10px rgba(0, 0, 0, 0.1) ;
-        font-size: 14px;
+        grid-template-columns: 10vw 1fr 1fr;
+        grid-template-rows: minmax(37px, 10vh) minmax(300px, 45vh) minmax(300px, 45vh);
 
-        &--brand {
-            grid-column: 1 / 2;
-            font-size: 20px;
-        }
-        
-        &--home{
-            grid-column: 3 / 4;
-            text-decoration: none;
-            font-family: 'PoppinsBold';
-            color: royalblue;
-            &:hover{
-                text-decoration: underline;
-                text-decoration-thickness: 2px;
+        &__topbar {
+            /* position: fixed; */
+            /* background-color: red; */
+            grid-area: 1 / 1 / 2 / 4;
+            /* width: 100vw; */
+            /* height: 68px; */
+            display: grid;
+            /* backdrop-filter: blur(5px); */
+            grid-template-columns: 1.5fr minmax(1fr, 200px) repeat(4, .75fr) minmax(1fr, 200px) 1.5fr;
+            justify-items: center;
+            align-items: center;
+            background-color: rgba(0, 0, 0, 1);
+            box-shadow: 0 10px 50px 10px rgba(0, 0, 0, 0.1) ;
+            font-size: 14px;
+
+            &--brand {
+                grid-column: 1 / 2;
+                font-size: 20px;
+            }
+
+            
+
+            &--home{
+                grid-column: 3 / 4;
+                text-decoration: none;
+                font-family: 'PoppinsBold';
+                color: royalblue;
+                &:hover{
+                    text-decoration: underline;
+                    text-decoration-thickness: 2px;
+                }
+            }
+
+            &--about {
+                grid-column: 4 / 5;
+                text-decoration: none;
+                color: white;
+                &:hover{
+                    text-decoration: underline;
+                    text-decoration-thickness: 2px;
+                }
+            }
+
+            &--portfolio{
+                grid-column: 5 / 6;
+                text-decoration: none;
+                color: white;
+                &:hover{
+                    text-decoration: underline;
+                    text-decoration-thickness: 2px;
+                }
+            }
+
+            &--contact {
+                grid-column: 6 / 7;
+                text-decoration: none;
+                color: white;
+                &:hover{
+                    text-decoration: underline;
+                    text-decoration-thickness: 2px;
+                }
+            }
+
+            &--social {
+                grid-column: 8 / 9;
             }
         }
 
-        &--about {
-            grid-column: 4 / 5;
-            text-decoration: none;
-            color: white;
-            &:hover{
-                text-decoration: underline;
-                text-decoration-thickness: 2px;
+
+        &__image{
+            grid-area: 2 / 3 / 4 / 4;
+            z-index: -1;
+            background-image: url('../img/profileBackground.jpeg');
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            /* min-width: 500px; */
+
+        }
+
+        &__intro {
+            grid-area: 2 / 2 / 4 / 3;
+            display: grid;
+            grid-template-rows: .4fr .6fr 1fr;
+            padding-top: 80px;
+            padding-right: 50px;
+
+
+            &--hello {
+                display: flex;
+                align-self: flex-end;
+                padding-bottom: 10px;
             }
-        }
 
-        &--portfolio{
-            grid-column: 5 / 6;
-            text-decoration: none;
-            color: white;
-            &:hover{
-                text-decoration: underline;
-                text-decoration-thickness: 2px;
+            &--name {
+                /* display: none; */
+                /* width: 50px; */
             }
-        }
 
-        &--contact {
-            grid-column: 6 / 7;
-            text-decoration: none;
-            color: white;
-            &:hover{
-                text-decoration: underline;
-                text-decoration-thickness: 2px;
+            &--name_small{
+                display: none;
+                /* background-color: red; */
             }
-        }
 
-        &--social {
-            grid-column: 8 / 9;
-        }
-    }
-
-    
-
-    &__image{
-        grid-area: 2 / 3 / 4 / 4;
-        z-index: -1;
-        background-image: url('../img/profileBackground.jpeg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        /* min-width: 500px; */
-        
-    }
-
-    &__intro {
-        grid-area: 2 / 2 / 4 / 3;
-        display: grid;
-        grid-template-rows: .6fr .5fr 1fr;
-        padding-top: 80px;
-        padding-right: 50px;
-        
-
-        &--hello {
-            display: flex;
-            align-self: flex-end;
-            padding-bottom: 10px;
-        }
-
-        &--name {
-            /* margin-top: 10px; */
-        }
-
-        &--text {
-            padding-top: 25px;
-            padding-right: 40px;
-            padding-bottom: 40px;
-            grid-row: 3 / 4;
-            color: #151527;
-            /* background-color: blueviolet; */
-            font-family: 'PoppinsBold';
-            font-size: 20px;
-        }
-
-        &--button {
-            margin-top: 30px;
-            width: 150px;
-            height: 50px;
-            appearance: 0;
-            outline: 0;
-            border: 0;
-            font-family: 'PoppinsBold';
-            border-radius: 25px;
-            transition: all .2s;
-            box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.2);
-
-            &:active{
-                transform: translateY(2px);
-                box-shadow: 0 1px 5px 4px rgba(0, 0, 0, 0.1);
+            &--text {
+                padding-top: 25px;
+                padding-right: 40px;
+                padding-bottom: 40px;
+                grid-row: 3 / 4;
+                color: #151527;
+                /* background-color: blueviolet; */
+                font-family: 'PoppinsBold';
+                font-size: 1.1vw;
             }
-        } 
-    }
 
-    &__intro-bg{
-        grid-area: 3 / 1 / 4 / 3;
-        background: linear-gradient(to right top, #9255B5, #F9A676, #FFE3C1);
-        z-index: -1;
+            &--button {
+                margin-top: 30px;
+                width: 150px;
+                height: 50px;
+                appearance: 0;
+                outline: 0;
+                border: 0;
+                font-family: 'PoppinsBold';
+                border-radius: 25px;
+                transition: all .2s;
+                box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.2);
+
+                &:active{
+                    transform: translateY(2px);
+                    box-shadow: 0 1px 5px 4px rgba(0, 0, 0, 0.1);
+                }
+            } 
+        }
+
+        &__intro-bg{
+            grid-area: 3 / 1 / 4 / 3;
+            background: linear-gradient(to right top, #9255B5, #F9A676, #FFE3C1);
+            z-index: -1;
+        }
     }
 }
