--- a/sass/main.css
+++ b/sass/main.css
@@ -310,6 +310,19 @@ body::-webkit-scrollbar {
         -ms-user-select: none;
             user-select: none;
   }
+  .tags {
+    position: -webkit-sticky;
+    position: sticky;
+    -webkit-writing-mode: vertical-rl;
+        -ms-writing-mode: tb-rl;
+            writing-mode: vertical-rl;
+    /* margin-top: auto; */
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+    padding-right: 1vw;
+    font-size: 1vw;
+    opacity: 0.25;
+  }
   .front-end {
     background-color: #77BE55;
   }
@@ -463,10 +476,6 @@ body::-webkit-scrollbar {
     -ms-flex-item-align: end;
         align-self: flex-end;
     padding-bottom: 10px;
-  }
-  .header__intro--name {
-    /* display: none; */
-    /* width: 50px; */
   }
   .header__intro--name_small {
     display: none;
@@ -656,6 +665,7 @@ body::-webkit-scrollbar {
     -ms-grid-row-span: 1;
     grid-row: 1/ 2;
     font-size: 1.2rem;
+    padding-top: 50px;
   }
   .skills-container {
     -ms-grid-column: 2;
