--- a/sass/mobile/_base_mobile.scss
+++ b/sass/mobile/_base_mobile.scss
@@ -1,4 +1,22 @@
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 430px) {
+
+    .container {
+        display: grid;
+        grid-template-columns: 10vw 1fr 10vw;
+        grid-template-rows: max-content max-content 1000px;
+        grid-row-gap: 100px;
+    }
+    
+    .home-tag {
+        grid-area: 1 / 1 / 2 / 2;
+        top: 0;
+    }
+    
+    .what-i-do-tag {
+        grid-area: 2 / 1 / 3 / 2;
+        top: 12vw;
+    }
+
     .my-skills {
         grid-column: 1 / 4;
         grid-row: 2 / 3;
@@ -37,6 +55,16 @@
         user-select: none;
     }
 
+    .tags {
+        position: sticky;
+        writing-mode: vertical-rl;
+        /* margin-top: auto; */ //FIXME: DO NOT CHANGE
+        transform: rotate(180deg);
+        padding-right: 1vw;
+        font-size: 1vw;
+        opacity: 0.25;
+    }
+
     .front-end {
         background-color: #77BE55;
         &--angular {
@@ -65,4 +93,5 @@
     .extras-2 {
         background-color: #52379E;
     }
+    
 }
