--- a/sass/mobile/_header_mobile.scss
+++ b/sass/mobile/_header_mobile.scss
@@ -1,12 +1,5 @@
 @media screen and (max-width: 430px) {
 
-    .container {
-        display: grid;
-        grid-template-columns: 10vw 1fr 10vw;
-        grid-template-rows: max-content max-content 1000px;
-        grid-row-gap: 100px;
-    }
-
     .header {
         grid-column: 1 / 4;
         grid-row: 1 / 2;
@@ -59,7 +52,7 @@
         &__intro {
             grid-area: 2 / 2 / 4 / 3;
             display: grid;
-            grid-template-rows: .5fr .5fr 1fr;
+            grid-template-rows: 1fr .5fr .5fr .5fr;
             /* padding-top: 80px; */
             /* padding-right: 50px; */
             
@@ -67,7 +60,7 @@
             &--hello {
                 display: flex;
                 align-self: flex-end;
-                padding-bottom: 10px;
+                /* padding-bottom: 10px; */
             }
 
             &--name {
@@ -76,7 +69,7 @@
             }
 
             &--text {
-                padding-top: 25px;
+                padding-top: 20px;
                 // padding-right: 40px;
                 padding-bottom: 40px;
                 grid-row: 3 / 4;
@@ -84,11 +77,13 @@
                 color: #151527;
                 /* background-color: blueviolet; */
                 font-family: 'PoppinsBold';
-                font-size: 5vw;
+                z-index: 2;
+                font-size: 15px;
             }
     
             &--button {
-                margin-top: 30px;
+                grid-row: 4/ 5;
+                /* margin-top: 30px; */
                 width: 150px;
                 height: 50px;
                 appearance: 0;
