--- a/sass/tablet/_skills_tablet.scss
+++ b/sass/tablet/_skills_tablet.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 431px) and (max-width: 1024px) {
 
     .my-skills {
         grid-column: 1 / 4;
@@ -14,14 +14,12 @@
         grid-column: 2 / 3;
         grid-row: 1/ 2;
         font-size: 1.2rem;
-        padding-top: 50px;
     }
 
     .skills-container {
         grid-column: 2 / 3;
         line-height: 3rem;
         user-select: none;
-        /* background-color: blueviolet; */
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -37,6 +35,7 @@
         font-size: 16px;
         user-select: none;
     }
+
 
     .front-end {
         background-color: #77BE55;
