--- a/sass/desktop/_skills.scss
+++ b/sass/desktop/_skills.scss
@@ -21,7 +21,6 @@
         grid-column: 2 / 3;
         line-height: 3rem;
         user-select: none;
-        /* background-color: blueviolet; */
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -32,7 +31,8 @@
         padding: 2px 15px;
         align-self: center;
         margin: 5px;
-        box-shadow: 0 5px 5px 5px rgba($color: #000000, $alpha: .2);
+        border-top: 1px solid rgba(255, 255, 255, .5);
+        box-shadow: 0 5px 5px 5px rgba(0, 0, 0, .1);
         /* width: 300px; */
         font-size: 16px;
         user-select: none;
@@ -40,9 +40,6 @@
 
     .front-end {
         background-color: #77BE55;
-        &--angular {
-            color: transparent;
-        }
     }
 
     .back-end {
