--- a/sass/mobile/_skills.scss
+++ b/sass/mobile/_skills.scss
@@ -32,17 +32,14 @@
         padding: 2px 15px;
         align-self: center;
         margin: 5px;
-        box-shadow: 0 5px 5px 5px rgba($color: #000000, $alpha: .2);
-        /* width: 300px; */
+        border-top: 1px solid rgba(255, 255, 255, .5);
+        box-shadow: 0 5px 5px 5px rgba(0, 0, 0, .1);
         font-size: 16px;
         user-select: none;
     }
 
     .front-end {
         background-color: #77BE55;
-        &--angular {
-            color: transparent;
-        }
     }
 
     .back-end {
