--- a/sass/tablet/_skills.scss
+++ b/sass/tablet/_skills.scss
@@ -30,7 +30,8 @@
         padding: 2px 15px;
         align-self: center;
         margin: 5px;
-        box-shadow: 0 5px 5px 5px rgba($color: #000000, $alpha: .2);
+        border-top: 1px solid rgba(255, 255, 255, .5);
+        box-shadow: 0 5px 5px 5px rgba(0, 0, 0, .1);
         /* width: 300px; */
         font-size: 16px;
         user-select: none;
@@ -39,9 +40,6 @@
 
     .front-end {
         background-color: #77BE55;
-        &--angular {
-            color: transparent;
-        }
     }
 
     .back-end {
