Responsiveness optimized for Tablets and Mobile devices

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,10 +4,10 @@
 @import "./desktop/_header.scss";
 @import "./desktop/_skills.scss";
 
-@import "./mobile/_base_mobile.scss";
-@import "./mobile/_header_mobile.scss";
-@import "./mobile/_skills_mobile.scss";
+@import "./mobile/_base.scss";
+@import "./mobile/_header.scss";
+@import "./mobile/_skills.scss";
 
-@import "./tablet/_base_tablet.scss";
-@import "./tablet/_header_tablet.scss";
-@import "./tablet/_skills_tablet.scss";
+@import "./tablet/_base.scss";
+@import "./tablet/_header.scss";
+@import "./tablet/_skills.scss";
