--- a/sass/desktop/_base.scss
+++ b/sass/desktop/_base.scss
@@ -9,7 +9,7 @@
 }
 
 html {
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
     font-size: 62.5%;
 }
 
@@ -46,21 +46,21 @@ body {
     
     .tags {
         position: sticky;
-        writing-mode: vertical-rl;
+        // writing-mode: vertical-rl;
         margin-top: auto; //FIXME: DO NOT CHANGE
-        transform: rotate(180deg);
-        padding-right: 1vw;
-        font-size: 1.8vw;
+        // transform: rotate(180deg);
+        padding: 10px;
+        font-size: 1vw;
         opacity: 0.25;
     }
     
     .home-tag {
         grid-area: 1 / 1 / 2 / 2;
-        top: 2vw;
+        top: 5px;
     }
     
     .what-i-do-tag {
         grid-area: 2 / 1 / 3 / 2;
-        top: 12vw;
+        top: 4vh;
     }
 }
