--- a/sass/main.css
+++ b/sass/main.css
@@ -121,7 +121,8 @@
 }
 
 html {
-  /* box-sizing: border-box; */
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-size: 62.5%;
 }
 
@@ -161,14 +162,9 @@ body::-webkit-scrollbar {
   .tags {
     position: -webkit-sticky;
     position: sticky;
-    -webkit-writing-mode: vertical-rl;
-        -ms-writing-mode: tb-rl;
-            writing-mode: vertical-rl;
     margin-top: auto;
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
-    padding-right: 1vw;
-    font-size: 1.8vw;
+    padding: 10px;
+    font-size: 1vw;
     opacity: 0.25;
   }
   .home-tag {
@@ -177,7 +173,7 @@ body::-webkit-scrollbar {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-area: 1 / 1 / 2 / 2;
-    top: 2vw;
+    top: 5px;
   }
   .what-i-do-tag {
     -ms-grid-row: 2;
@@ -185,7 +181,7 @@ body::-webkit-scrollbar {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-area: 2 / 1 / 3 / 2;
-    top: 12vw;
+    top: 4vh;
   }
 }
 
