--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./desktop/_base.scss";
 @import "./desktop/_header.scss";
 @import "./desktop/_skills.scss";
+@import "./desktop/_blog.scss";
 
 @import "./mobile/_base.scss";
 @import "./mobile/_header.scss";
