--- a/frontend/sass/desktop/_skills.scss
+++ b/frontend/sass/desktop/_skills.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width: 431px) and (max-width: 1024px) {
+@media screen and (min-width: 1025px) {
 
     .my-skills {
         grid-column: 1 / 4;
@@ -13,7 +13,8 @@
     .heading {
         grid-column: 2 / 3;
         grid-row: 1/ 2;
-        font-size: 1.2rem;
+        font-size: 20px;
+        padding-top: 50px;
     }
 
     .skills-container {
@@ -32,11 +33,9 @@
         margin: 5px;
         border-top: 1px solid rgba(255, 255, 255, .5);
         box-shadow: 0 5px 5px 5px rgba(0, 0, 0, .1);
-        /* width: 300px; */
         font-size: 16px;
         user-select: none;
     }
-
 
     .front-end {
         background-color: #77BE55;
@@ -52,6 +51,7 @@
 
     .extras-1 {
         background-color: #B6902F;
+
     }
 
     .extras-2 {
