--- a/frontend/sass/main.css
+++ b/frontend/sass/main.css
@@ -117,13 +117,18 @@
 
 @font-face {
   font-family: PoppinsBold;
-  src: url("../fonts/Poppins-SemiBold.ttf");
+  src: url("../fonts/PoppinsSemiBold.ttf");
+}
+
+:root {
+  color-scheme: dark;
 }
 
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -132,12 +137,6 @@ body {
   padding: 0;
   color: white;
   font-family: 'Poppins', 'Segoe UI';
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-body::-webkit-scrollbar {
-  display: none;
 }
 
 *,
@@ -182,182 +181,6 @@ body::-webkit-scrollbar {
     -ms-grid-column-span: 1;
     grid-area: 2 / 1 / 3 / 2;
     top: 4vh;
-  }
-}
-
-@media screen and (min-width: 1025px) {
-  .header {
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-area: 1 / 1 / 2 / 4;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 10vw 1fr 1fr;
-        grid-template-columns: 10vw 1fr 1fr;
-    -ms-grid-rows: 68px minmax(300px, 45vh) minmax(300px, 45vh);
-        grid-template-rows: 68px minmax(300px, 45vh) minmax(300px, 45vh);
-  }
-  .header__topbar {
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-area: 1 / 1 / 2 / 4;
-    display: -ms-grid;
-    display: grid;
-    /* backdrop-filter: blur(5px); */
-    -ms-grid-columns: 1.5fr minmax(1fr, 200px) (0.75fr)[4] minmax(1fr, 200px) 1.5fr;
-        grid-template-columns: 1.5fr minmax(1fr, 200px) repeat(4, 0.75fr) minmax(1fr, 200px) 1.5fr;
-    justify-items: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background-color: black;
-    -webkit-box-shadow: 0 10px 50px 10px rgba(0, 0, 0, 0.1);
-            box-shadow: 0 10px 50px 10px rgba(0, 0, 0, 0.1);
-    font-size: 14px;
-  }
-  .header__topbar--brand {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
-    font-size: 20px;
-  }
-  .header__topbar--home {
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 1;
-    grid-column: 3 / 4;
-    text-decoration: none;
-    font-family: 'PoppinsBold';
-    color: royalblue;
-  }
-  .header__topbar--home:hover {
-    text-decoration: underline;
-    text-decoration-thickness: 2px;
-  }
-  .header__topbar--about {
-    -ms-grid-column: 4;
-    -ms-grid-column-span: 1;
-    grid-column: 4 / 5;
-    text-decoration: none;
-    color: white;
-  }
-  .header__topbar--about:hover {
-    text-decoration: underline;
-    text-decoration-thickness: 2px;
-  }
-  .header__topbar--portfolio {
-    -ms-grid-column: 5;
-    -ms-grid-column-span: 1;
-    grid-column: 5 / 6;
-    text-decoration: none;
-    color: white;
-  }
-  .header__topbar--portfolio:hover {
-    text-decoration: underline;
-    text-decoration-thickness: 2px;
-  }
-  .header__topbar--contact {
-    -ms-grid-column: 6;
-    -ms-grid-column-span: 1;
-    grid-column: 6 / 7;
-    text-decoration: none;
-    color: white;
-  }
-  .header__topbar--contact:hover {
-    text-decoration: underline;
-    text-decoration-thickness: 2px;
-  }
-  .header__topbar--social {
-    -ms-grid-column: 8;
-    -ms-grid-column-span: 1;
-    grid-column: 8 / 9;
-  }
-  .header__image {
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 2;
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 1;
-    grid-area: 2 / 3 / 4 / 4;
-    z-index: -1;
-    background-image: url("../img/profileBackground.jpeg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-  .header__intro {
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 2;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-area: 2 / 2 / 4 / 3;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-rows: .5fr .5fr .5fr .5fr;
-        grid-template-rows: .5fr .5fr .5fr .5fr;
-    padding-top: 80px;
-    padding-right: 50px;
-  }
-  .header__intro--hello {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-item-align: end;
-        align-self: flex-end;
-    padding-bottom: 10px;
-  }
-  .header__intro--name_small {
-    display: none;
-    /* background-color: red; */
-  }
-  .header__intro--text {
-    padding-top: 25px;
-    padding-right: 40px;
-    padding-bottom: 40px;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3 / 4;
-    color: #151527;
-    /* background-color: blueviolet; */
-    font-family: 'PoppinsBold';
-    font-size: 1.1vw;
-  }
-  .header__intro--button {
-    /* margin-top: 30px; */
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-row: 4 / 5;
-    width: 150px;
-    height: 50px;
-    -webkit-appearance: 0;
-       -moz-appearance: 0;
-            appearance: 0;
-    outline: 0;
-    border: 0;
-    font-family: 'PoppinsBold';
-    border-radius: 25px;
-    -webkit-transition: all .2s;
-    transition: all .2s;
-    -webkit-box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.2);
-            box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.2);
-  }
-  .header__intro--button:active {
-    -webkit-transform: translateY(2px);
-            transform: translateY(2px);
-    -webkit-box-shadow: 0 1px 5px 4px rgba(0, 0, 0, 0.1);
-            box-shadow: 0 1px 5px 4px rgba(0, 0, 0, 0.1);
-  }
-  .header__intro-bg {
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-area: 3 / 1 / 4 / 3;
-    background: -webkit-gradient(linear, left bottom, right top, from(#9255B5), color-stop(#F9A676), to(#FFE3C1));
-    background: linear-gradient(to right top, #9255B5, #F9A676, #FFE3C1);
-    z-index: -1;
   }
 }
 
@@ -441,14 +264,14 @@ body::-webkit-scrollbar {
   }
 }
 
-.blog {
+.blog-home {
   margin-top: 5vw;
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2 / 3;
 }
 
-.blog__heading {
+.blog-home__heading {
   position: absolute;
   color: rgba(255, 255, 255, 0.05);
   font-size: 9vw;
@@ -459,18 +282,18 @@ body::-webkit-scrollbar {
   font-family: 'PoppinsBold';
 }
 
-.blog__container {
+.blog-home__container {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
 }
 
-.blog__tile {
+.blog-home__tile {
   padding: 40px;
 }
 
-.blog__title {
+.blog-home__title {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -480,11 +303,11 @@ body::-webkit-scrollbar {
   transition: all .2s;
 }
 
-.blog__title:hover {
+.blog-home__title:hover {
   color: #FBBF94;
 }
 
-.blog__preview {
+.blog-home__preview {
   overflow-y: hidden;
   font-size: 16px;
   padding: 10px 0px;
@@ -492,13 +315,229 @@ body::-webkit-scrollbar {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.blog .blog__read-more {
+.blog-home .blog__read-more {
   text-decoration: none;
   color: royalblue;
 }
 
 a {
   text-decoration: none;
+}
+
+.blog {
+  margin-top: 3rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 10vw .4fr 1fr 10vw;
+      grid-template-columns: 10vw .4fr 1fr 10vw;
+}
+
+.blog__post {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3 / 4;
+  font-size: 1.6rem;
+  border-left: 1px solid gray;
+  padding-left: 3rem;
+  margin-bottom: 10rem;
+}
+
+.blog__post--title {
+  font-size: 4rem;
+  -ms-grid-column-align: center;
+      justify-self: center;
+}
+
+.blog__post--date {
+  color: #FBBF94;
+  font-size: 1rem;
+  letter-spacing: .1rem;
+}
+
+.blog__post--body {
+  padding: 2rem 0;
+}
+
+.navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: black;
+  height: 10vh;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.navigation__brand {
+  width: 20vw;
+  font-size: 1.2vw;
+  padding: 0px 3rem;
+  font-family: 'PoppinsBold';
+}
+
+.navigation__links {
+  width: 80vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.navigation--links {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 20px;
+  font-size: .9vw;
+  color: white;
+}
+
+.navigation--links:hover {
+  color: royalblue;
+}
+
+.navigation--links__social:hover {
+  text-decoration: none;
+}
+
+.active {
+  color: royalblue;
+}
+
+.header {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: 1 / 1 / 2 / 4;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 10vw 1fr .7fr;
+      grid-template-columns: 10vw 1fr .7fr;
+  -ms-grid-rows: 45vh 46vh;
+      grid-template-rows: 45vh 46vh;
+}
+
+.header__image {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 3 / 3 / 4;
+  z-index: -1;
+  background-image: url("../img/profileBackground.jpeg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.header__primary {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 1 / 2 / 2 / 3;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  font-family: 'Poppins';
+  font-weight: bolder;
+}
+
+.header__primary--hello {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  letter-spacing: .5rem;
+  margin-top: 2rem;
+  font-size: 1.2rem;
+}
+
+.header__primary--name {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2 / 3;
+  margin-right: 5rem;
+  margin-bottom: 2rem;
+  font-size: 5rem;
+  letter-spacing: 2rem;
+  line-height: 7rem;
+}
+
+.header__secondary {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-area: 2 / 2 / 3 / 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.header__secondary--text {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-top: 3rem;
+  margin-right: 5vw;
+  color: #151527;
+  font-family: 'PoppinsBold';
+  font-size: 1.6rem;
+}
+
+.header__secondary--link {
+  text-decoration: none;
+  color: royalblue;
+}
+
+.header__secondary--link:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
+}
+
+.header__secondary--button {
+  width: 150px;
+  height: 50px;
+  background-color: #fff;
+  color: black;
+  -webkit-appearance: 0;
+     -moz-appearance: 0;
+          appearance: 0;
+  outline: 0;
+  border: 0;
+  font-family: 'PoppinsBold';
+  border-radius: 25px;
+  -webkit-transition: all .1s;
+  transition: all .1s;
+  -webkit-box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.2);
+}
+
+.header__secondary--button:active {
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+  -webkit-box-shadow: 0 1px 5px 4px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 1px 5px 4px rgba(0, 0, 0, 0.1);
+}
+
+.header__gradient {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 2 / 1 / 3 / 3;
+  background: -webkit-gradient(linear, left bottom, right top, from(#9255B5), color-stop(#F9A676), to(#FFE3C1));
+  background: linear-gradient(to right top, #9255B5, #F9A676, #FFE3C1);
+  z-index: -1;
 }
 
 @media screen and (max-width: 430px) {
@@ -738,301 +777,6 @@ a {
     border-top: 1px solid rgba(255, 255, 255, 0.5);
     -webkit-box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.1);
             box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.1);
-    font-size: 16px;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-  }
-  .front-end {
-    background-color: #77BE55;
-  }
-  .back-end {
-    background-color: #37989E;
-  }
-  .languages {
-    background-color: #9C379E;
-  }
-  .extras-1 {
-    background-color: #B6902F;
-  }
-  .extras-2 {
-    background-color: #52379E;
-  }
-}
-
-@media screen and (min-width: 431px) and (max-width: 1024px) {
-  .container {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 10vw 1fr 10vw;
-        grid-template-columns: 10vw 1fr 10vw;
-    -ms-grid-rows: max-content max-content 1000px;
-        grid-template-rows: -webkit-max-content -webkit-max-content 1000px;
-        grid-template-rows: max-content max-content 1000px;
-    grid-row-gap: 100px;
-  }
-  .tags {
-    position: -webkit-sticky;
-    position: sticky;
-    -webkit-writing-mode: vertical-rl;
-        -ms-writing-mode: tb-rl;
-            writing-mode: vertical-rl;
-    margin-top: auto;
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
-    padding-right: 1vw;
-    font-size: 1vw;
-    opacity: 0.25;
-  }
-  .home-tag {
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-area: 1 / 1 / 2 / 2;
-    top: 0;
-  }
-  .what-i-do-tag {
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-area: 2 / 1 / 3 / 2;
-    top: 12vw;
-  }
-}
-
-@media screen and (min-width: 431px) and (max-width: 1024px) {
-  .header {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-column: 1 / 4;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1 / 2;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 10vw 1fr 1fr;
-        grid-template-columns: 10vw 1fr 1fr;
-    -ms-grid-rows: 68px 250px 250px;
-        grid-template-rows: 68px 250px 250px;
-  }
-  .header__topbar {
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-area: 1 / 1 / 2 / 4;
-    display: -ms-grid;
-    display: grid;
-    /* backdrop-filter: blur(5px); */
-    -ms-grid-columns: 1.5fr minmax(1fr, 200px) (0.75fr)[4] minmax(1fr, 200px) 1.5fr;
-        grid-template-columns: 1.5fr minmax(1fr, 200px) repeat(4, 0.75fr) minmax(1fr, 200px) 1.5fr;
-    justify-items: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background-color: black;
-    -webkit-box-shadow: 0 10px 50px 10px rgba(0, 0, 0, 0.1);
-            box-shadow: 0 10px 50px 10px rgba(0, 0, 0, 0.1);
-    font-size: 14px;
-  }
-  .header__topbar--brand {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
-    font-size: 20px;
-  }
-  .header__topbar--home {
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 1;
-    grid-column: 3 / 4;
-    text-decoration: none;
-    font-family: 'PoppinsBold';
-    color: royalblue;
-  }
-  .header__topbar--home:hover {
-    text-decoration: underline;
-    text-decoration-thickness: 2px;
-  }
-  .header__topbar--about {
-    -ms-grid-column: 4;
-    -ms-grid-column-span: 1;
-    grid-column: 4 / 5;
-    text-decoration: none;
-    color: white;
-  }
-  .header__topbar--about:hover {
-    text-decoration: underline;
-    text-decoration-thickness: 2px;
-  }
-  .header__topbar--portfolio {
-    -ms-grid-column: 5;
-    -ms-grid-column-span: 1;
-    grid-column: 5 / 6;
-    text-decoration: none;
-    color: white;
-  }
-  .header__topbar--portfolio:hover {
-    text-decoration: underline;
-    text-decoration-thickness: 2px;
-  }
-  .header__topbar--contact {
-    -ms-grid-column: 6;
-    -ms-grid-column-span: 1;
-    grid-column: 6 / 7;
-    text-decoration: none;
-    color: white;
-  }
-  .header__topbar--contact:hover {
-    text-decoration: underline;
-    text-decoration-thickness: 2px;
-  }
-  .header__topbar--social {
-    -ms-grid-column: 8;
-    -ms-grid-column-span: 1;
-    grid-column: 8 / 9;
-  }
-  .header__image {
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 2;
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 1;
-    grid-area: 2 / 3 / 4 / 4;
-    background-image: url(../../img/profileBackground.jpeg);
-    background-size: cover;
-    background-position: center;
-  }
-  .header__intro {
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 2;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-area: 2 / 2 / 4 / 3;
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-rows: .7fr .3fr 200px 50px;
-        grid-template-rows: .7fr .3fr 200px 50px;
-  }
-  .header__intro--hello {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-item-align: end;
-        align-self: flex-end;
-    padding-bottom: 10px;
-  }
-  .header__intro--name {
-    display: none;
-  }
-  .header__intro--text {
-    padding-top: 7vw;
-    padding-right: 40px;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3 / 4;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1 / 2;
-    color: #151527;
-    font-family: 'PoppinsBold';
-    font-size: 1.5vw;
-  }
-  .header__intro--button {
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-row: 4 / 5;
-    margin-top: 25px;
-    width: 150px;
-    height: 50px;
-    -webkit-appearance: 0;
-       -moz-appearance: 0;
-            appearance: 0;
-    outline: 0;
-    border: 0;
-    font-family: 'PoppinsBold';
-    border-radius: 25px;
-    -webkit-transition: all .2s;
-    transition: all .2s;
-    -webkit-box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.2);
-            box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.2);
-  }
-  .header__intro--button:active {
-    -webkit-transform: translateY(2px);
-            transform: translateY(2px);
-    -webkit-box-shadow: 0 1px 5px 4px rgba(0, 0, 0, 0.1);
-            box-shadow: 0 1px 5px 4px rgba(0, 0, 0, 0.1);
-  }
-  .header__intro-bg {
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-area: 3 / 1 / 4 / 4;
-    background: -webkit-gradient(linear, left bottom, right top, from(#9255B5), color-stop(#F9A676), to(#FFE3C1));
-    background: linear-gradient(to right top, #9255B5, #F9A676, #FFE3C1);
-    z-index: -1;
-  }
-}
-
-@media screen and (min-width: 431px) and (max-width: 1024px) {
-  .my-skills {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-column: 1 / 4;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2 / 3;
-    font-family: 'PoppinsBold';
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-rows: min-content max-content;
-        grid-template-rows: -webkit-min-content -webkit-max-content;
-        grid-template-rows: min-content max-content;
-    grid-row-gap: 30px;
-    -ms-grid-columns: 10vw 1fr 10vw;
-        grid-template-columns: 10vw 1fr 10vw;
-  }
-  .heading {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2 / 3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/ 2;
-    font-size: 1.5rem;
-  }
-  .skills-container {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2 / 3;
-    line-height: 3rem;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .skills {
-    border-radius: 500px;
-    padding: 2px 15px;
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-    margin: 5px;
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
-    -webkit-box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.1);
-            box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.1);
-    /* width: 300px; */
     font-size: 16px;
     -webkit-user-select: none;
        -moz-user-select: none;
