--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./desktop/_base.scss";
 // @import "./desktop/_header.scss";
 @import "./desktop/_skills.scss";
+@import "./desktop/_footer.scss";
 @import "./desktop/_blog-home.scss";
 @import "./desktop/_blog-post.scss";
 @import "./desktop/_navigation.scss";
