--- a/views/_blog_integrated.ejs
+++ b/views/_blog_integrated.ejs
@@ -5,7 +5,7 @@
     <div class="blog-home__container">
     <% for (let i = 0; i < 1; i++) {%> 
         <div class="blog-home__tile">
-            <a href="/blog/<%= articles[i].slug %>" target="_blank"><div class="blog-home__title">
+            <a href="/blog/<%= articles[i].slug %>"><div class="blog-home__title">
                 <h2><%= articles[i].title %></h2>
             </div></a>
             <div class="blog-home__date">
