--- a/views/_navigation.ejs
+++ b/views/_navigation.ejs
@@ -1,15 +1,12 @@
-<div class="navigation">
-    <div class="navigation__brand">ranjanrahul</div>
-    <div class="navigation__links">
-        <a href="/" class="navigation--links navigation--links__home">Home</a>
-        <a href="" class="navigation--links navigation--links">What I Do</a>
-        <a href="/blog" class="navigation--links navigation--links__blog">Blog</a>
-        <a href="" class="navigation--links navigation--links__portfolio">Portfolio</a>
-        <a href="" class="navigation--links navigation--links__contact">Contact</a>
-        <div class=" navigation--links navigation--links__social">
-            <span>
-                ❄ ⛱ 🔥
-            </span>
-        </div>
+<div class="nav">
+    <div class="nav--left">ranjanrahul</div>
+    <div class="nav--right">
+        <li><a href="/" class="nav__e nav__home">Home</a></li>
+        <li><a href="" class="nav__e nav__skills">What I Do</a></li>
+        <li><a href="/blog" class="nav__e nav__blog">Blog</a></li>
+        <li><a href="" class="nav__e nav__portfolio">Portfolio</a></li>
+        <li><i class="fab fa-facebook-square nav__s"></i></li>
+        <li><i class="fab fa-github-square nav__s"></i></li>
+        <li><i class="fab fa-linkedin nav__s r-margin"></i></li>
     </div>
 </div>
