--- a/frontend/sass/desktop/_blog-home.scss
+++ b/frontend/sass/desktop/_blog-home.scss
@@ -1,11 +1,14 @@
 .blog-home {
-    margin-top: 5vw;
+    // margin-top: 5vw;
     grid-column: 2 / 3;
+    max-width: 85rem;
+    margin-left: auto;
+    margin-right: auto;
 
     &__heading{
         position: absolute;
         color: rgba(255, 255, 255, .05);
-        font-size: 9vw;
+        font-size: 10rem;
         transform: translateY(-40%);
         padding: 10px 0px;
         z-index: -1;
@@ -32,6 +35,10 @@
         }
     }
 
+    &__date {
+        color: royalblue;
+    }
+
     &__preview{
         overflow-y: hidden;
         font-size: 16px;
@@ -48,4 +55,5 @@
 
 a {
     text-decoration: none;
+    color: #fa97f3;
 }
