--- a/frontend/sass/main.css
+++ b/frontend/sass/main.css
@@ -132,6 +132,7 @@ html {
 }
 
 body {
+  font-smooth: always;
   background-color: #151527;
   margin: 0;
   padding: 0;
@@ -144,19 +145,18 @@ body {
 *::after {
   margin: 0;
   padding: 0;
-  /* box-sizing: inherit; */
 }
 
 @media screen and (min-width: 1025px) {
   .container {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 10vw 1fr 10vw;
-        grid-template-columns: 10vw 1fr 10vw;
-    -ms-grid-rows: max-content max-content 1000px;
-        grid-template-rows: -webkit-max-content -webkit-max-content 1000px;
-        grid-template-rows: max-content max-content 1000px;
-    grid-row-gap: 100px;
+    -ms-grid-columns: 20vw 1fr 20vw;
+        grid-template-columns: 20vw 1fr 20vw;
+    -ms-grid-rows: max-content max-content max-content;
+        grid-template-rows: -webkit-max-content -webkit-max-content -webkit-max-content;
+        grid-template-rows: max-content max-content max-content;
+    grid-row-gap: 10rem;
   }
   .tags {
     position: -webkit-sticky;
@@ -186,36 +186,23 @@ body {
 
 @media screen and (min-width: 1025px) {
   .my-skills {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-column: 1 / 4;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
+    grid-column: 2 / 3;
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
     grid-row: 2 / 3;
+    max-width: 80rem;
     font-family: 'PoppinsBold';
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-rows: min-content max-content;
-        grid-template-rows: -webkit-min-content -webkit-max-content;
-        grid-template-rows: min-content max-content;
-    grid-row-gap: 30px;
-    -ms-grid-columns: 10vw 1fr 10vw;
-        grid-template-columns: 10vw 1fr 10vw;
+    margin-left: auto;
+    margin-right: auto;
   }
   .heading {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2 / 3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/ 2;
-    font-size: 20px;
-    padding-top: 50px;
+    font-size: 2rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
   }
   .skills-container {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2 / 3;
     line-height: 3rem;
     -webkit-user-select: none;
        -moz-user-select: none;
@@ -232,16 +219,16 @@ body {
         flex-wrap: wrap;
   }
   .skills {
-    border-radius: 500px;
-    padding: 2px 15px;
+    border-radius: 50rem;
+    padding: .2rem 1.5rem;
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
-    margin: 5px;
+    margin: .5rem;
     border-top: 1px solid rgba(255, 255, 255, 0.5);
-    -webkit-box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.1);
-            box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.1);
-    font-size: 16px;
+    -webkit-box-shadow: 0 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.1);
+    font-size: 1.6rem;
     -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
@@ -264,17 +251,74 @@ body {
   }
 }
 
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 6.8rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer--brand {
+  font-family: 'PoppinsBold';
+  font-size: 2rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.footer--left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 0px 3rem;
+  list-style-type: none;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.footer--right {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style-type: none;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__e {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 2rem;
+  font-size: 1.2rem;
+  color: white;
+}
+
 .blog-home {
-  margin-top: 5vw;
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
   grid-column: 2 / 3;
+  max-width: 85rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .blog-home__heading {
   position: absolute;
   color: rgba(255, 255, 255, 0.05);
-  font-size: 9vw;
+  font-size: 10rem;
   -webkit-transform: translateY(-40%);
           transform: translateY(-40%);
   padding: 10px 0px;
@@ -307,6 +351,10 @@ body {
   color: #FBBF94;
 }
 
+.blog-home__date {
+  color: royalblue;
+}
+
 .blog-home__preview {
   overflow-y: hidden;
   font-size: 16px;
@@ -322,6 +370,7 @@ body {
 
 a {
   text-decoration: none;
+  color: #fa97f3;
 }
 
 .blog {
@@ -358,53 +407,75 @@ a {
   padding: 2rem 0;
 }
 
-.navigation {
+.nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   background-color: black;
-  height: 10vh;
+  height: 6.8rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-.navigation__brand {
-  width: 20vw;
-  font-size: 1.2vw;
+.nav--left {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  font-size: 2rem;
   padding: 0px 3rem;
   font-family: 'PoppinsBold';
 }
 
-.navigation__links {
-  width: 80vw;
+.nav--right {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  list-style-type: none;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.navigation--links {
+.nav__e {
+  -webkit-transition: all .25s;
+  transition: all .25s;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  padding: 20px;
-  font-size: .9vw;
+  padding: 2rem;
+  font-size: 1.2rem;
   color: white;
 }
 
-.navigation--links:hover {
+.nav__e:hover {
   color: royalblue;
 }
 
-.navigation--links__social:hover {
-  text-decoration: none;
+.nav__s {
+  -webkit-transition: all .25s;
+  transition: all .25s;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  font-size: 2.4rem;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: .5rem;
+  color: white;
 }
 
-.active {
+.nav__s:hover {
   color: royalblue;
+}
+
+.r-margin {
+  margin-right: 2.5rem;
 }
 
 .header {
