--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=1">
     <link rel="stylesheet" href="sass/main.css">
-    <title>GoofyNugtz</title>
+    <link href="/css/all.css" rel="stylesheet">
+    <title>goofyNugtz</title>
 </head>
 <body>
     <%- include('_navigation') %>
@@ -44,5 +45,6 @@
 
         <%- include('_blog_integrated') %>
     </div>
+    <%- include('_footer') %>
 </body>
 </html>
