--- a/frontend/sass/main.scss
+++ b/frontend/sass/main.scss
@@ -1,13 +1,13 @@
 @import "_animations.scss";
 
 @import "./desktop/_base.scss";
-// @import "./desktop/_header.scss";
+@import "./desktop/_header.scss";
 @import "./desktop/_skills.scss";
 @import "./desktop/_footer.scss";
 @import "./desktop/_blog-home.scss";
 @import "./desktop/_blog-post.scss";
 @import "./desktop/_navigation.scss";
-@import "./desktop/_header_new.scss";
+// @import "./desktop/_header_new.scss";
 
 @import "./mobile/_base.scss";
 @import "./mobile/_header.scss";
