--- a/views/_blog_integrated.ejs
+++ b/views/_blog_integrated.ejs
@@ -14,7 +14,7 @@
             <div class="blog-home__preview">
                 <%= articles[i].description %>
             </div>
-            <a href="/blog/<%= articles[i].slug %>" class="blog-home__read-more" target="_blank">Read More</a>
+            <a href="/blog/<%= articles[i].slug %>" class="blog-home__read-more" target="_blank">Read More ➡</a>
             
         </div>
     <% } %> 
