--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -9,9 +9,10 @@
     
     <div class="footer--right">
         <li><p class="footer__e">© Rahul R</p></li>
-        <li><i class="fab fa-facebook-square nav--right nav__s"></i></li>
-        <li><i class="fab fa-github-square nav--right nav__s"></i></li>
-        <li><i class="fab fa-linkedin nav--right nav__s r-margin"></i></li>
+        <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-square nav--right nav__s"></i></a></li>
+        <li><a href="https://github.com/goofyNugtz" target="_blank"><i class="fab fa-github-square nav--right nav__s"></i></a></li>
+        <li><a href="/"><i class="fab fa-linkedin nav--right nav__s"></i></a></li>
+        <li><a href="/"><i class="fab fa-dev nav__s r-margin"></i></a></li>
     </div>
     
 
