--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,21 +1,16 @@
+<link rel="stylesheet" href="sass/main.css">
+<link href="/css/all.css" rel="stylesheet">
+
 <header class="header">
-    <div class="header__primary">
-        <span class="header__primary--hello">Hello, I’m </span>
-        <span class="header__primary--name">
-            RAHUL RANJAN
-        </span>
-    </div>
-    
-    <div class="header__secondary">
-        <p class="header__secondary--text"> 
-            I am a CS Freshie from NIT Durgapur, expected to finish course in 2024. Currently a beginner coder on HackerRank, CodeForces and CodeChef doing <a class="header__secondary--link" href="https://www.stopstalk.com/user/profile/goofyNugtz">Competitive Programming.</a>
-        </p>
-        <button class="header__secondary--button">
-            Contact Me
-        </button>
-    </div>
-
-    <div class="header__gradient"></div>
-
-    <div class="header__image"></div>
+    <div class="background-dark"></div>
+    <div class="background-light"></div>
+    <p class="txt txt--hello mg-top">Hello, I'm</p>
+    <p class="txt txt--name">RAHUL RANJAN</p>
+    <p class="intro">I am sophomore year undergrad from National Institute of Technology, Durgapur. I'm currently interested in Web Development, Web Designs (UI/UX) and also <a href="https://www.stopstalk.com/user/profile/goofyNugtz">Competitive Programing</a> at times.
+    </p>
+    <p></p>
+    <button class="button mg-top-small mg-down">
+        <i class="fas fa-at"></i>
+        Contact Me
+    </button>
 </header>
