--- a/views/_navigation.ejs
+++ b/views/_navigation.ejs
@@ -1,12 +1,22 @@
 <div class="nav">
-    <div class="nav--left">ranjanrahul</div>
+    <div class="nav--left">
+        <div class="nav--left">ranjanrahul</div>
+        <li><i class="fab fa-facebook-f nav__s l-margin"></i></li>
+        <li><i class="fab fa-github nav__s"></i></li>
+        <li><i class="fab fa-linkedin-in nav__s"></i></li>
+        <li><i class="fab fa-dev nav__s"></i></li>
+    </div>
     <div class="nav--right">
         <li><a href="/" class="nav__e nav__home">Home</a></li>
         <li><a href="" class="nav__e nav__skills">What I Do</a></li>
         <li><a href="/blog" class="nav__e nav__blog">Blog</a></li>
         <li><a href="" class="nav__e nav__portfolio">Portfolio</a></li>
+        <li><i class="fas fa-moon nav__e dark-mode"></i></li>
+        <li><i class="fas fa-sun nav__e light-mode r-margin"></i></li>
+        <!-- 
         <li><i class="fab fa-facebook-square nav__s"></i></li>
         <li><i class="fab fa-github-square nav__s"></i></li>
-        <li><i class="fab fa-linkedin nav__s r-margin"></i></li>
+        <li><i class="fab fa-linkedin nav__s"></i></li>
+        <li><i class="fab fa-dev nav__s "></i></li> -->
     </div>
 </div>
