--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=1">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=.8, user-scalable=1">
     <link rel="stylesheet" href="sass/main.css">
     <link href="/css/all.css" rel="stylesheet">
     <title>goofyNugtz</title>
@@ -11,7 +11,7 @@
 <body>
     <%- include('_navigation') %>
     <div class="container">
-        <div class="home-tag tags">Home</div>
+        <!-- <div class="home-tag tags">Home</div> -->
         <%- include('_header') %>
 
         <div class="what-i-do-tag tags">What I Do</div>
