--- a/frontend/sass/desktop/_skills.scss
+++ b/frontend/sass/desktop/_skills.scss
@@ -4,7 +4,6 @@
         grid-column: 2 / 3;
         grid-row: 2 / 3;
         max-width: 80rem;
-        font-family: 'PoppinsBold';
         margin-left: auto;
         margin-right: auto;
         // background-color: #77BE55;
@@ -18,6 +17,7 @@
         font-size: 2rem;
         padding-top: 5rem;
         padding-bottom: 5rem;
+        font-family: 'SFProBold';
     }
 
     .skills-container {
@@ -40,7 +40,7 @@
     }
 
     .front-end {
-        background-color: #77BE55;
+        background-color: #549658;
     }
 
     .back-end {
