--- a/frontend/sass/main.css
+++ b/frontend/sass/main.css
@@ -120,6 +120,22 @@
   src: url("../fonts/PoppinsSemiBold.ttf");
 }
 
+@font-face {
+  font-family: SFPro;
+  src: url("../../fonts/SFProText-Regular.ttf");
+}
+
+@font-face {
+  font-family: SFProBold;
+  src: url("../../fonts/SFProText-Bold.ttf");
+}
+
+/*colors:
+background-dark: #0F111A
+background-dark-inverse: #F0EEE5
+background-dark-alt: #151527
+
+*/
 :root {
   color-scheme: dark;
 }
@@ -137,7 +153,7 @@ body {
   margin: 0;
   padding: 0;
   color: white;
-  font-family: 'Poppins', 'Segoe UI';
+  font-family: "SFPro", "Segoe UI", "Poppins";
 }
 
 *,
@@ -184,6 +200,114 @@ body {
   }
 }
 
+.header {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-area: 1 / 1 / 2 / 4;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80rem;
+}
+
+.background-dark {
+  position: absolute;
+  top: 0;
+  pointer-events: none;
+  left: 0;
+  height: 75.4rem;
+  background-color: #0f111a;
+  width: 100%;
+  z-index: -1;
+}
+
+.background-light {
+  position: absolute;
+  top: 0;
+  left: 17.5rem;
+  width: 45.5%;
+  height: 75.4rem;
+  background-color: transparent;
+  z-index: 1;
+  -webkit-backdrop-filter: invert(100%);
+          backdrop-filter: invert(100%);
+  pointer-events: none;
+}
+
+.txt {
+  -webkit-backdrop-filter: invert(100%);
+          backdrop-filter: invert(100%);
+  background-color: transparent;
+  font-weight: 900;
+  padding: 0 5rem;
+  margin: 2rem 0;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  color: black;
+  z-index: 1;
+}
+
+.txt--hello {
+  font-size: 4rem;
+  letter-spacing: .4rem;
+}
+
+.txt--name {
+  font-family: 'Poppins';
+  font-size: 90px;
+  letter-spacing: 1rem;
+}
+
+.intro {
+  font-family: 'SFPro';
+  font-size: 1.8rem;
+  max-width: 45rem;
+}
+
+.button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  text-rendering: optimizeLegibility;
+  border: 0;
+  width: 16rem;
+  height: 6rem;
+  outline: 0;
+  background-color: #AB69A7;
+  -webkit-backdrop-filter: invert(100%);
+          backdrop-filter: invert(100%);
+  color: black;
+  z-index: 5;
+  border-radius: 20rem;
+  font-family: "Poppins";
+  font-weight: 700;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  -webkit-box-shadow: 0 2px 5px 8px rgba(255, 255, 255, 0.2);
+          box-shadow: 0 2px 5px 8px rgba(255, 255, 255, 0.2);
+}
+
+.button:active {
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+  -webkit-box-shadow: 0 1px 5px 4px rgba(255, 255, 255, 0.1);
+          box-shadow: 0 1px 5px 4px rgba(255, 255, 255, 0.1);
+}
+
+.mg-top {
+  margin-top: 15rem;
+}
+
+.mg-top-small {
+  margin-top: 5rem;
+}
+
+.mg-down {
+  margin-bottom: 10rem;
+}
+
 @media screen and (min-width: 1025px) {
   .my-skills {
     -ms-grid-column: 2;
@@ -193,7 +317,6 @@ body {
     -ms-grid-row-span: 1;
     grid-row: 2 / 3;
     max-width: 80rem;
-    font-family: 'PoppinsBold';
     margin-left: auto;
     margin-right: auto;
   }
@@ -201,6 +324,7 @@ body {
     font-size: 2rem;
     padding-top: 5rem;
     padding-bottom: 5rem;
+    font-family: 'SFProBold';
   }
   .skills-container {
     line-height: 3rem;
@@ -235,7 +359,7 @@ body {
             user-select: none;
   }
   .front-end {
-    background-color: #77BE55;
+    background-color: #549658;
   }
   .back-end {
     background-color: #37989E;
@@ -319,9 +443,8 @@ body {
   position: absolute;
   color: rgba(255, 255, 255, 0.05);
   font-size: 10rem;
-  -webkit-transform: translateY(-40%);
-          transform: translateY(-40%);
-  padding: 10px 0px;
+  -webkit-transform: translate(-15%, -30%);
+          transform: translate(-15%, -30%);
   z-index: -1;
   font-family: 'PoppinsBold';
 }
@@ -329,19 +452,19 @@ body {
 .blog-home__container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
 }
 
 .blog-home__tile {
-  padding: 40px;
+  padding: 4rem;
 }
 
 .blog-home__title {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  font-size: 20px;
+  font-size: 2rem;
   color: #AB69A7;
   -webkit-transition: all .2s;
   transition: all .2s;
@@ -422,8 +545,12 @@ a {
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-size: 2rem;
-  padding: 0px 3rem;
+  list-style-type: none;
+  padding: 0px 1.5rem;
   font-family: 'PoppinsBold';
 }
 
@@ -453,7 +580,7 @@ a {
 }
 
 .nav__e:hover {
-  color: royalblue;
+  color: #0D92FF;
 }
 
 .nav__s {
@@ -471,144 +598,15 @@ a {
 }
 
 .nav__s:hover {
-  color: royalblue;
+  color: #F58F3B;
 }
 
 .r-margin {
   margin-right: 2.5rem;
 }
 
-.header {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-area: 1 / 1 / 2 / 4;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 10vw 1fr .7fr;
-      grid-template-columns: 10vw 1fr .7fr;
-  -ms-grid-rows: 45vh 46vh;
-      grid-template-rows: 45vh 46vh;
-}
-
-.header__image {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 2;
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 1;
-  grid-area: 1 / 3 / 3 / 4;
-  z-index: -1;
-  background-image: url("../img/profileBackground.jpeg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.header__primary {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-area: 1 / 2 / 2 / 3;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-  font-family: 'Poppins';
-  font-weight: bolder;
-}
-
-.header__primary--hello {
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 1;
-  grid-row: 1 / 2;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
-  letter-spacing: .5rem;
-  margin-top: 2rem;
-  font-size: 1.2rem;
-}
-
-.header__primary--name {
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  grid-row: 2 / 3;
-  margin-right: 5rem;
-  margin-bottom: 2rem;
-  font-size: 5rem;
-  letter-spacing: 2rem;
-  line-height: 7rem;
-}
-
-.header__secondary {
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-area: 2 / 2 / 3 / 3;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.header__secondary--text {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  margin-top: 3rem;
-  margin-right: 5vw;
-  color: #151527;
-  font-family: 'PoppinsBold';
-  font-size: 1.6rem;
-}
-
-.header__secondary--link {
-  text-decoration: none;
-  color: royalblue;
-}
-
-.header__secondary--link:hover {
-  text-decoration: underline;
-  text-decoration-thickness: 2px;
-}
-
-.header__secondary--button {
-  width: 150px;
-  height: 50px;
-  background-color: #fff;
-  color: black;
-  -webkit-appearance: 0;
-     -moz-appearance: 0;
-          appearance: 0;
-  outline: 0;
-  border: 0;
-  font-family: 'PoppinsBold';
-  border-radius: 25px;
-  -webkit-transition: all .1s;
-  transition: all .1s;
-  -webkit-box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 2px 10px 5px rgba(0, 0, 0, 0.2);
-}
-
-.header__secondary--button:active {
-  -webkit-transform: translateY(2px);
-          transform: translateY(2px);
-  -webkit-box-shadow: 0 1px 5px 4px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 1px 5px 4px rgba(0, 0, 0, 0.1);
-}
-
-.header__gradient {
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 1;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-area: 2 / 1 / 3 / 3;
-  background: -webkit-gradient(linear, left bottom, right top, from(#9255B5), color-stop(#F9A676), to(#FFE3C1));
-  background: linear-gradient(to right top, #9255B5, #F9A676, #FFE3C1);
-  z-index: -1;
+.l-margin {
+  margin-left: 2.5rem;
 }
 
 @media screen and (max-width: 430px) {
